deploy: daf430d0150f55774b255f03fd940a136486355d

--- a/gale/models/external-models/add-an-external-model-using-api-integration/index.html
+++ b/gale/models/external-models/add-an-external-model-using-api-integration/index.html
@@ -2632,7 +2632,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
