--- a/gale/models/fine-tune-models/view-the-generated-api-endpoint/index.html
+++ b/gale/models/fine-tune-models/view-the-generated-api-endpoint/index.html
@@ -2699,7 +2699,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
