--- a/gale/agents/configure-an-agent/index.html
+++ b/gale/agents/configure-an-agent/index.html
@@ -2733,7 +2733,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
