--- a/gale/agents/create-a-new-agent/index.html
+++ b/gale/agents/create-a-new-agent/index.html
@@ -2639,7 +2639,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
