--- a/gale/agents/deploy-an-agent/index.html
+++ b/gale/agents/deploy-an-agent/index.html
@@ -2682,7 +2682,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
