--- a/gale/agents/overview/index.html
+++ b/gale/agents/overview/index.html
@@ -2680,7 +2680,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
