--- a/gale/data/manage-datasets/index.html
+++ b/gale/data/manage-datasets/index.html
@@ -2671,7 +2671,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
