--- a/gale/home/index.html
+++ b/gale/home/index.html
@@ -3365,7 +3365,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
