--- a/gale/index.html
+++ b/gale/index.html
@@ -2595,7 +2595,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
