--- a/gale/license/index.html
+++ b/gale/license/index.html
@@ -2600,7 +2600,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
