--- a/gale/models/fine-tune-models/create-a-fine-tuned-model/index.html
+++ b/gale/models/fine-tune-models/create-a-fine-tuned-model/index.html
@@ -2632,7 +2632,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
