--- a/gale/models/open-source-models/deploy-an-imported-model-from-hugging-face/index.html
+++ b/gale/models/open-source-models/deploy-an-imported-model-from-hugging-face/index.html
@@ -2632,7 +2632,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
