--- a/gale/models/open-source-models/model-optimization/index.html
+++ b/gale/models/open-source-models/model-optimization/index.html
@@ -2733,7 +2733,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
