--- a/gale/models/open-source-models/select-and-deploy-an-open-source-model/index.html
+++ b/gale/models/open-source-models/select-and-deploy-an-open-source-model/index.html
@@ -2673,7 +2673,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
