--- a/gale/playground/add-a-model/index.html
+++ b/gale/playground/add-a-model/index.html
@@ -2621,7 +2621,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
