--- a/gale/playground/create-a-new-prompt-experiment/index.html
+++ b/gale/playground/create-a-new-prompt-experiment/index.html
@@ -2621,7 +2621,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
