--- a/gale/playground/explore-other-actions-to-perform-in-the-prompt-playground/index.html
+++ b/gale/playground/explore-other-actions-to-perform-in-the-prompt-playground/index.html
@@ -2680,7 +2680,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
