--- a/gale/playground/generate-output-using-advanced-mode/index.html
+++ b/gale/playground/generate-output-using-advanced-mode/index.html
@@ -2621,7 +2621,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
