--- a/gale/playground/overview/index.html
+++ b/gale/playground/overview/index.html
@@ -2662,7 +2662,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
