--- a/gale/settings/integrations/integrate-with-s3-bucket/index.html
+++ b/gale/settings/integrations/integrate-with-s3-bucket/index.html
@@ -2614,7 +2614,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
