--- a/gale/settings/integrations/integrate-with-wandb/index.html
+++ b/gale/settings/integrations/integrate-with-wandb/index.html
@@ -2612,7 +2612,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
