--- a/gale/settings/settings-overview/index.html
+++ b/gale/settings/settings-overview/index.html
@@ -2692,7 +2692,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
