--- a/gale/settings/user-management/invite-a-user-to-your-account/index.html
+++ b/gale/settings/user-management/invite-a-user-to-your-account/index.html
@@ -2600,7 +2600,7 @@
         
   
   <span class="md-ellipsis">
-    Import Users from Active Directory
+    Add Users from Active Directory
   </span>
   
 
