deploy: c6e999b6def90be1cab1e7c6829df5d2f594a648

--- a/gale/models/fine-tune-models/create-a-fine-tuned-model/index.html
+++ b/gale/models/fine-tune-models/create-a-fine-tuned-model/index.html
@@ -2817,7 +2817,7 @@
 <li>Selecting a hardware</li>
 <li>Integrating with Weights &amp; Biases (optional)</li>
 </ol>
-<p>To fine-tune a model, follow these steps:</p>
+<p>Steps to fine-tune a model:</p>
 <ol>
 <li>
 <p>Go to <strong>Models</strong> &gt; <strong>Fine-tuned models</strong> and click <strong>Start fine-tuning</strong>.<a class="glightbox" href="../images/start-fine-tuning.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/start-fine-tuning.png" alt="Start Fine-Tune Model" title="Start Fine-Tune Model" style="border: 1px solid gray; zoom:80%;"></a></p>
@@ -2826,7 +2826,7 @@
 <p>The <strong>Create a fine-tuned model</strong> dialog is displayed. In the <strong>General details</strong> section:</p>
 <ul>
 <li>
-<p>Enter a <strong>Model name</strong> and <strong>Description</strong> for the fine-tuned model.
+<p>Enter a <strong>Model name</strong> and <strong>Description</strong> for the fine-tuned model.<br />
 <a class="glightbox" href="../images/general-details-section.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/general-details-section.png" alt="General Details Section" title="General Details Section" style="border: 1px solid gray; zoom:80%;"></a></p>
 </li>
 <li>
@@ -2838,8 +2838,8 @@
 <p>In the <strong>Base</strong> <strong>model</strong> section, choose the model to be fine-tuned.</p>
 <ul>
 <li>
-<p>If you choose <strong>Kore-hosted models</strong>, select the <strong>model</strong> from the dropdown menu and click <strong>Next</strong>.
-  <a class="glightbox" href="../images/base-model-kore hosted.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/base-model-kore hosted.png" alt="Kore hosted models" title="Kore hosted models" style="border: 1px solid gray; zoom:80%;"></a></p>
+<p>If you choose <strong>Kore-hosted models</strong>, select the <strong>model</strong> from the dropdown menu and click <strong>Next</strong>.<br />
+<a class="glightbox" href="../images/base-model-kore hosted.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/base-model-kore hosted.png" alt="Kore hosted models" title="Kore hosted models" style="border: 1px solid gray; zoom:80%;"></a></p>
 </li>
 <li>
 <p>If you choose to <strong>Import from Hugging Face</strong>, select the <strong>Hugging Face connection</strong> type from the dropdown, and paste the <strong>model name</strong>. Click <strong>Next</strong>. For more information about how to connect to your Hugging Face account, see<a href="../../../settings/integrations/enable-hugging-face/"> How to Connect to your Hugging Face Account</a>.
@@ -2854,7 +2854,7 @@
 <li>Enter the <strong>Number of Epochs</strong>, which indicates how many times the model processes the entire dataset during training.</li>
 <li>Enter a number for <strong>Batch size</strong>, which implies the number of training examples used in one training iteration.</li>
 <li>Enter a value for the <strong>Learning rate</strong>, which implies the size of the steps taken during the optimization of a model.</li>
-<li>Click <strong>Next</strong>.
+<li>Click <strong>Next</strong>.<br />
 <a class="glightbox" href="../images/fine-tuning-configuration-section.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/fine-tuning-configuration-section.png" alt="Fine-Tuning Configuration Section" title="Fine-Tuning Configuration Section" style="border: 1px solid gray; zoom:80%;"></a></li>
 </ul>
 </li>
@@ -2889,8 +2889,8 @@
 </div>
 </li>
 <li>
-<p>Select the required hardware for fine-tuning from the dropdown menu and click <strong>Next</strong>.
-        <a class="glightbox" href="../images/hardware-section.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/hardware-section.png" alt="Hardware Section" title="Hardware Section" style="border: 1px solid gray; zoom:80%;"></a></p>
+<p>Select the required hardware for fine-tuning from the dropdown menu and click <strong>Next</strong>.<br />
+<a class="glightbox" href="../images/hardware-section.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/hardware-section.png" alt="Hardware Section" title="Hardware Section" style="border: 1px solid gray; zoom:80%;"></a></p>
 </li>
 <li>
 <p>In the <strong>Weights &amp; Biases</strong> section, select your <strong>WandB connection</strong> from the drop-down list and click <strong>Next</strong>. 
@@ -2903,11 +2903,11 @@ To create a Weight &amp; Biases connection, click <strong>+ New connection</stro
 </li>
 <li>
 <p>In the <strong>Review</strong> step, verify all the details before starting the fine-tuning. To modify previous steps, click <strong>Back</strong>. 
-    <a class="glightbox" href="../images/review-section.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/review-section.png" alt="Review Section" title="Review Section" style="border: 1px solid gray; zoom:80%;"></a></p>
+<a class="glightbox" href="../images/review-section.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/review-section.png" alt="Review Section" title="Review Section" style="border: 1px solid gray; zoom:80%;"></a></p>
 </li>
 <li>
 <p>Click <strong>Start fine-tuning</strong>.<br />
-The model <strong>Overview</strong> page displays real-time progress. You can also view the model’s overview page by clicking the model on the <strong>Fine-tuned models</strong> page. <a href="../model-settings-overview/">Learn more</a>.
+The model <strong>Overview</strong> page displays real-time progress. You can also view the model’s overview page by clicking the model on the <strong>Fine-tuned models</strong> page. <a href="../model-settings-overview/">Learn more</a>.<br />
 <a class="glightbox" href="../images/overview1.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/overview1.png" alt="Overview Page" title="Overview Page" style="border: 1px solid gray; zoom:80%;"></a></p>
 </li>
 </ol>
