--- a/gale/models/fine-tune-models/view-the-generated-api-endpoint/index.html
+++ b/gale/models/fine-tune-models/view-the-generated-api-endpoint/index.html
@@ -2921,14 +2921,14 @@
 <p class="admonition-title">Note</p>
 <p>You will receive an email notification after your model deployment is completed and an API is generated and ready to use.</p>
 </div>
-<p>To view the API Endpoint, follow these steps:</p>
+<p>Steps to view the API Endpoint:</p>
 <ol>
 <li>
-<p>Click the <strong>Model Endpoint</strong> tab in the left panel on the <strong>Models</strong> page of your fine-tuned model.</p>
+<p>Go to <strong>Models</strong> &gt; <strong>Fine-tuned models</strong> and click the required model from the list. The model's Overview page is displayed. Click the <strong>Model Endpoint</strong> tab in the left navigation.</p>
 </li>
 <li>
-<p>Click the <strong>Copy</strong> icon to copy and share the API Endpoint.</p>
-<p><a class="glightbox" href="../images/view-generated-api-endpoint.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/view-generated-api-endpoint.png" alt="Generated API Endpoint" title="Generate API Endpoint" style="border: 1px solid gray; zoom:80%;"></a></p>
+<p>Click the <strong>Copy</strong> icon to copy and share the API Endpoint.<br />
+<a class="glightbox" href="../images/view-generated-api-endpoint.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/view-generated-api-endpoint.png" alt="Generated API Endpoint" title="Generate API Endpoint" style="border: 1px solid gray; zoom:80%;"></a></p>
 </li>
 </ol>
 <p>The API endpoint is available in 3 formats. You can copy and use the same as required.</p>
@@ -2946,8 +2946,8 @@
 <p>After deploying a model, you can modify its parameters and redeploy the updated version. The deployment history table tracks the complete life cycle of the model, offering detailed information for each version. This includes the deployment name, the timestamp when it was deployed, the deployment duration, the individual who performed the deployment, and other relevant details. </p>
 <p>Additionally, the system automatically appends a version number to the deployment name and increments it with each subsequent redeployment, ensuring a clear and organized record of all model versions and their respective changes.</p>
 <p>For example, if a model named "Flan T5" is deployed for the first time, it will be named as "Flan T5_v1". Subsequent deployments will be named as "Flan T5_v2", "Flan T5_v3", and so on, incrementing the version number with each redeployment.</p>
-<p>The most recent deployment is marked with a green ticket next to the model name. Click on any deployment version to view the details.</p>
-<p><a class="glightbox" href="../images/deployment-history.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/deployment-history.png" alt="Deployment History" title="Deployment History" style="border: 1px solid gray; zoom:80%;"></a></p>
+<p>The most recent deployment is marked with a green ticket next to the model name. Click on any deployment version to view the details.<br />
+<a class="glightbox" href="../images/deployment-history.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/deployment-history.png" alt="Deployment History" title="Deployment History" style="border: 1px solid gray; zoom:80%;"></a></p>
 <p><strong>General details</strong>: This section displays the model's basic information, such as its name, description, tags, optimization technique, parameters, the hardware used, and deployment duration.</p>
 <p><strong>Deployment details</strong>: This section includes who deployed the model, the start and end timestamps of deployment, the deployment duration, and its status (Success, Failed, or Deploying). In case of a failed deployment, hover over “Status” to view the reason for the failure.</p>
 <p><strong>Un-deployment details</strong>: This section appears only if the model is undeployed either automatically by the system or manually. In the case of manual un-deployment, the person who initiated the un-deployment, along with the start and end timestamps of the process, is displayed.</p>
