deploy: 07096566f7e6315644cbe034908bdbd0ed80cd23

--- a/gale/models/fine-tune-models/deploy-a-fine-tuned-model/index.html
+++ b/gale/models/fine-tune-models/deploy-a-fine-tuned-model/index.html
@@ -2818,7 +2818,7 @@
 </ul>
 <p>Or</p>
 <ul>
-<li>Click <strong>Model Endpoint</strong> in the left mavigation and then <strong>Deploy model</strong> at the top-right corner of the page.<br />
+<li>Click <strong>Model Endpoint</strong> in the left mavigation and then click <strong>Deploy model</strong> at the top-right corner of the page.<br />
 <a class="glightbox" href="../images/deploy-fine-tuned-model-from-overview.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/deploy-fine-tuned-model-from-overview.png" alt="Deploy Fine-Tuned Model from Overview" title="Deploy Fine-Tuned Model from Overview" style="border: 1px solid gray; zoom:80%;"></a></li>
 </ul>
 </li>
