--- a/gale/models/fine-tune-models/view-the-generated-api-endpoint/index.html
+++ b/gale/models/fine-tune-models/view-the-generated-api-endpoint/index.html
@@ -2924,7 +2924,7 @@
 <p>Steps to view the API Endpoint:</p>
 <ol>
 <li>
-<p>Go to <strong>Models</strong> &gt; <strong>Fine-tuned models</strong> and click the required model from the list. The model's Overview page is displayed. Click the <strong>Model Endpoint</strong> tab in the left navigation.</p>
+<p>Go to <strong>Models</strong> &gt; <strong>Fine-tuned models</strong> and click the required model from the list. The model's Overview page is displayed. Click <strong>Model Endpoint</strong> in the left navigation.</p>
 </li>
 <li>
 <p>Click the <strong>Copy</strong> icon to copy and share the API Endpoint.<br />
