deploy: 393452b6a91e443c46d2d99b5d6d0cb87dcfbe86

--- a/gale/models/hardware-pricing/index.html
+++ b/gale/models/hardware-pricing/index.html
@@ -2780,7 +2780,7 @@
 <thead>
 <tr>
 <th>Hardware Configuration</th>
-<th>Hourly Model Credits</th>
+<th>Hourly <abbr title="1 Model Credit = $1">Model Credits</abbr></th>
 </tr>
 </thead>
 <tbody>
