deploy: e6be2fe2db66777c9531f5888dc2c2379f60b51f

--- a/gale/models/hardware-pricing/index.html
+++ b/gale/models/hardware-pricing/index.html
@@ -2780,7 +2780,7 @@
 <thead>
 <tr>
 <th>Hardware Configuration</th>
-<th>Hourly <abbr title="1 Model Credit = $1">Model Credits</abbr></th>
+<th>Hourly Model Credits <span class="twemoji" title="1 Model Credit = $1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10 10 10 0 0 0 10-10A10 10 0 0 0 12 2m-1 15h2v-6h-2v6Z"/></svg></span></th>
 </tr>
 </thead>
 <tbody>
@@ -2814,6 +2814,8 @@
 </tr>
 </tbody>
 </table>
+<div class="language-text highlight"><pre><span></span><code>                    *(1 Model Credit = $1)*
+</code></pre></div>
 <p>Prices are per replica. You can define minimum and maximum replicas. For example, with 3 replicas of "A10 single", up to 3 "A10 singles" will be used during high load before requests enter a waiting period.</p>
 <p>Also, configurations like "T4 cluster of 4" represent one replica. A second replica would be another complete "T4 cluster of 4".</p>
 <div class="admonition note">
