deploy: 9cb3059e927b9a6ed68b2ccdb33d05de60c7f2d2

--- a/gale/agents/agents-flows/types-of-nodes/gen-ai-node/index.html
+++ b/gale/agents/agents-flows/types-of-nodes/gen-ai-node/index.html
@@ -2919,7 +2919,7 @@
 <p><strong>Custom Name</strong>: Enter an appropriate name for the node.</p>
 </li>
 <li>
-<p><strong>Select Model</strong>: Select a model from the list of configured models. (For more information on models, see Model Studio.)</p>
+<p><strong>Select Model</strong>: Select a model from the list of configured models (For more information on models, see Model Studio).</p>
 </li>
 <li>
 <p><strong>System Prompt</strong>: Enter the System Prompt for your use case. 
