deploy: 4bb063ac6b88cbd23a90af2cdb17fe2c346e369b

--- a/gale/settings/integrations/enable-hugging-face/index.html
+++ b/gale/settings/integrations/enable-hugging-face/index.html
@@ -2914,7 +2914,7 @@
 <p class="admonition-title">Note</p>
 <ul>
 <li>
-<p>Once the Hugging Face connection is completed, you can see your connection name in the drop-down box while selecting and deploying an Open-source model.  For more information about selecting and deploying, see <a href="../models/open-source-models/select-and-deploy-an-open-source-model.md">Select and Deploy an Open-Source Model</a></p>
+<p>Once the Hugging Face connection is completed, you can see your connection name in the drop-down box while selecting and deploying an Open-source model.  For more information about selecting and deploying, see <a href="../models/open-source-models/select-and-deploy-an-open-source-model.md">Select and Deploy an Open-Source Model</a>.</p>
 </li>
 <li>
 <p>If you delete the Hugging Face connection used for the model's deployment, the system will ask you to select a new connection on redeployment. </p>
