deploy: 759d607c3323d87bf39ebe1914ce791fae696daf

--- a/gale/agents/agents-flows/types-of-nodes/api-node/index.html
+++ b/gale/agents/agents-flows/types-of-nodes/api-node/index.html
@@ -2931,7 +2931,7 @@
 <p>The key difference between synchronous and asynchronous integration types is how the integration processes the request and response. Synchronous integrations block the client until the response is received, while asynchronous integrations allow the client to continue working while the integration processes the request.</p>
 </li>
 <li>
-<p>Priority order when multiple timeouts are set:  Agent timeout &gt; Node timeout &gt; Third-party API endpoint timeout.</p>
+<p>Timeout precedence: Agent timeout &gt; Node timeout &gt; Third-party API endpoint timeout.</p>
 </li>
 </ul>
 </div>
