--- a/gale/agents/configure-an-agent/index.html
+++ b/gale/agents/configure-an-agent/index.html
@@ -2994,7 +2994,7 @@ The key difference is that synchronous mode blocks the client until the response
 <a class="glightbox" href="../images/sync-mode-timeout.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/sync-mode-timeout.png" alt="Sync Mode Timeout" title="Sync Mode Timeout" style="border: 1px solid gray; zoom:70%;"></a></p>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
-<p>Priority order when multiple timeouts are set:  Agent timeout &gt; Node timeout &gt; Model timeout.</p>
+<p>Timeout precedence: Agent timeout &gt; Node timeout &gt; Model timeout.</p>
 </div>
 </li>
 <li>
