--- a/gale/agents/agents-flows/types-of-nodes/gen-ai-node/index.html
+++ b/gale/agents/agents-flows/types-of-nodes/gen-ai-node/index.html
@@ -2943,7 +2943,7 @@ default is 60 Seconds (1 minute).
 The node will trigger a timeout error if the request is not completed within the selected time frame.</p>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
-<p>Priority order when multiple timeouts are set:  Agent timeout &gt; Node timeout &gt; Model timeout.</p>
+<p>Timeout precedence: Agent timeout &gt; Node timeout &gt; Model timeout.</p>
 </div>
 </li>
 <li>
