--- a/gale/agents/deploy-an-agent/index.html
+++ b/gale/agents/deploy-an-agent/index.html
@@ -3024,6 +3024,10 @@
 <li>
 <p>Turn on the <strong>Enable async</strong> toggle to configure the asynchronous mode. Provide a URL, an access token, and the asynchronous mode timeout duration. The allowed timeout range is 60 seconds to 24 hours (86,400 seconds). The default is 180 Seconds (3 minutes).<br />
 <a class="glightbox" href="../images/async-mode-configuration.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/async-mode-configuration.png" alt="Deploy Button" title="Deploy Button" style="border: 1px solid gray; zoom:60%;"></a></p>
+<div class="admonition note">
+<p class="admonition-title">Note</p>
+</div>
+<p>Timeout precedence: Agent timeout &gt; Node timeout &gt; Model timeout.</p>
 </li>
 <li>
 <p>Click <strong>Save</strong>. The async push endpoint is created.<br />
