deploy: 57a5f3a74d054512d89e59faecb8bf46ec42bc2e

--- a/gale/playground/overview/index.html
+++ b/gale/playground/overview/index.html
@@ -2864,7 +2864,7 @@
 <p><strong>Simple vs. Advanced Mode</strong>: Simple mode allows quickly generating output by adding a prompt and model. Advanced mode provides more control, enabling the addition of a prompt, system prompt, and examples, linking a dataset, and adding multiple models to generate and compare outputs. <a href="../generate-output-using-advanced-mode/">Learn more</a>.  </p>
 </li>
 <li>
-<p><strong>Resue the Prompt Experiment</strong>: Copy the prompt as a Gen AI node directly in the Agent Flow builder or copy it for use elsewhere. You can also export/download the prompt and related data in CSV format. <a href="../explore-other-actions-to-perform-in-the-prompt-playground/#copy-a-prompt">Learn more</a>.</p>
+<p><strong>Reuse the Prompt Experiment</strong>: Copy the prompt as a Gen AI node directly in the Agent Flow builder or copy it for use elsewhere. You can also export/download the prompt and related data in CSV format. <a href="../explore-other-actions-to-perform-in-the-prompt-playground/#copy-a-prompt">Learn more</a>.</p>
 </li>
 <li>
 <p><strong>Restore a Prompt Experiment from History</strong>: Review the timeline of prompts and their corresponding generated outputs, and restore a prompt version if needed. <a href="../explore-other-actions-to-perform-in-the-prompt-playground/#restore-a-prompt-version-using-the-history">Learn more</a>.</p>
