deploy: b99e9dce11308fe2fabe34f10a5a42c2b45b4a58

--- a/gale/404.html
+++ b/gale/404.html
@@ -387,7 +387,7 @@
    <nav class="md-more-links">
     <div class="nav-links">
       <a class="nav-item" 
-          href="https://galeadmin-kore.github.io/docs/gale/introduction/">Release Notes</a>
+          href="https://docs.kore.ai/gale/getting-started/introduction/">Release Notes</a>
 
       <!-- <a class="nav-item"
           target="_blank" 
