--- a/gale/settings/user-management/invite-a-user-to-your-account/index.html
+++ b/gale/settings/user-management/invite-a-user-to-your-account/index.html
@@ -401,7 +401,7 @@
    <nav class="md-more-links">
     <div class="nav-links">
       <a class="nav-item" 
-          href="https://galeadmin-kore.github.io/docs/gale/introduction/">Release Notes</a>
+          href="https://docs.kore.ai/gale/getting-started/introduction/">Release Notes</a>
 
       <!-- <a class="nav-item"
           target="_blank" 
