deploy: a7b7607fac145020679cb1bb88ae1fbba7356671

--- a/gale/agents/configure-an-agent/index.html
+++ b/gale/agents/configure-an-agent/index.html
@@ -3000,7 +3000,7 @@ The key difference is that synchronous mode blocks the client until the response
 <li>
 <p>Turn on the <strong>Enable async</strong> toggle to configure the asynchronous mode if required and click <strong>Save</strong>.</p>
 <ul>
-<li>If you enable the asynchronous mode, provide a URL, an access token, and the asynchronous mode timeout duration. The allowed timeout range is 60 seconds to 24 hours (86,400 seconds). The default is 180 Seconds (3 minutes).<br />
+<li>If you enable the asynchronous mode, provide a URL, an access token, and the asynchronous mode timeout duration. The allowed timeout range is 60 seconds to 600 seconds (10 minutes). The default is 180 Seconds (3 minutes).<br />
 <a class="glightbox" href="../images/async-mode-configuration.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/async-mode-configuration.png" alt="Async Mode Configuration" title="Async Mode Configuration" style="border: 1px solid gray; zoom:80%;"></a></li>
 </ul>
 </li>
