--- a/gale/settings/user-management/role-management/index.html
+++ b/gale/settings/user-management/role-management/index.html
@@ -4289,7 +4289,7 @@
 <p>The <strong>Role Management Dashboard</strong> on the Settings console displays key information.</p>
 <p>To access the dashboard, follow the steps below:</p>
 <ol>
-<li>Log in to GALE and click <strong>Settings</strong> on the top menu.</li>
+<li><a href="../../../getting-started/sign-up-sign-in/#sign-in-to-gale" target="_blank">Log in</a> to GALE and click <strong>Settings</strong> on the top menu.</li>
 <li>Click <strong>Users Management</strong> &gt; <strong>Role Management</strong> on the left menu.
 <a class="glightbox" href="../images/access-role-management.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/access-role-management.png" alt="access role management" title="access role management" style="border: 1px solid gray; zoom:80%;"></a></li>
 </ol>
@@ -4407,7 +4407,7 @@
 <li>Security and Control Settings</li>
 <li>Manage Guardrail Models</li>
 <li>Billing
- <a class="glightbox" href="../images/enable-permissions.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/enable-permissions.png" alt="enable permissions" title="enable permissions" style="border: 1px solid gray; zoom:80%;"></a>       </li>
+  <a class="glightbox" href="../images/enable-permissions.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/enable-permissions.png" alt="enable permissions" title="enable permissions" style="border: 1px solid gray; zoom:80%;"></a>       </li>
 </ul>
 </li>
 <li>
