--- a/gale/agents/agents-flows/types-of-nodes/api-node/index.html
+++ b/gale/agents/agents-flows/types-of-nodes/api-node/index.html
@@ -2939,10 +2939,14 @@
 <li><strong>Custom Name</strong>: Enter an appropriate name for the node.</li>
 <li><strong>Type</strong>: Select the API type from the drop-down list - REST or SOAP.</li>
 <li>
-<p><strong>Integration Type</strong>: Select the integration type for the connection—synchronous or Asynchronous—and choose the timeout duration for the integration.</p>
+<p><strong>Integration Type</strong>: Select the integration type for the connection—synchronous or Asynchronous—and set the timeout duration for the integration. </p>
 <ul>
 <li><strong>Synchronous</strong>: The allowed range is 5 to 180 seconds (3 minutes). The default is 60 seconds.</li>
-<li><strong>Asynchronous</strong>: The allowed range is 30 seconds to 300 seconds (5 minutes). The default is 60 seconds.</li>
+<li><strong>Asynchronous</strong>: <ul>
+<li><strong>Set timeout</strong>: The allowed range is 30 seconds to 300 seconds (5 minutes). The default is 60 seconds.</li>
+<li><strong>No timeout</strong>: This allows the integration to wait indefinitely for the response without triggering a timeout error. (Ensure to select the same "No timeout" setting for both the API node and the agent to prevent any timeouts.)</li>
+</ul>
+</li>
 </ul>
 <p>The node will trigger a timeout error if the request is not completed within the selected time frame.</p>
 <div class="admonition notes">
