--- a/gale/agents/agents-flows/types-of-nodes/api-node/index.html
+++ b/gale/agents/agents-flows/types-of-nodes/api-node/index.html
@@ -2944,7 +2944,7 @@
 <li><strong>Synchronous</strong>: The allowed range is 5 to 180 seconds (3 minutes). The default is 60 seconds.</li>
 <li><strong>Asynchronous</strong>: <ul>
 <li><strong>Set timeout</strong>: The allowed range is 30 seconds to 300 seconds (5 minutes). The default is 60 seconds.</li>
-<li><strong>No timeout</strong>: This allows the integration to wait indefinitely for the response without triggering a timeout error. (Ensure to select the same "No timeout" setting for both the API node and the agent to prevent any timeouts.)</li>
+<li><strong>No timeout</strong>: The flow will pause and wait indefinitely for the response from the callback URL. This gives users the flexibility to automate their own processes, like approvals and checks, within their custom workflows before sending the response back. (Ensure to select the same "No timeout" setting for both the API node and the agent to prevent any timeouts.)</li>
 </ul>
 </li>
 </ul>
