deploy: 265c5ad180f0a8bc614f823ee5d14dd1dc137ae3

--- a/gale/models/open-source-models/select-and-deploy-an-open-source-model/index.html
+++ b/gale/models/open-source-models/select-and-deploy-an-open-source-model/index.html
@@ -2915,9 +2915,9 @@ For more information about connecting to your Hugging Face account, see<a href="
 <p>Based on the selected Kore-hosted model, the Optimization section is displayed. Choose the optimization option as required and then click <strong>Next</strong>. <a href="../model-optimization/">Learn more</a>.</p>
 <ul>
 <li><strong>Skip optimization</strong>: It skips the model optimization.</li>
-<li><strong>CTranslate2</strong>: Select Quantization from the dropdown menu. <a href="../model-optimization/#ctranslate2">Learn more</a>. </li>
+<li><strong>CTranslate2</strong>: Select Quantization from the dropdown menu if applicable. <a href="../model-optimization/#ctranslate2">Learn more</a>. </li>
 <li>
-<p><strong>vLLM</strong>: Select Quantization from the dropdown menu. <a href="../model-optimization/#vllm">Learn more</a>.  </p>
+<p><strong>vLLM</strong>: Select Quantization from the dropdown menu if applicable. <a href="../model-optimization/#vllm">Learn more</a>.  </p>
 <p><a class="glightbox" href="../images/image1.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/image1.png" alt=" " title=" " style="border: 1px solid gray; zoom:80%;"></a></p>
 </li>
 </ul>
