deploy: cb1b2289c58509579a63728e313bc800fc9e6363

--- a/gale/agents/agents-flows/types-of-nodes/function-node/index.html
+++ b/gale/agents/agents-flows/types-of-nodes/function-node/index.html
@@ -2931,11 +2931,11 @@
 <div class="language-text highlight"><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1" href="#__codelineno-0-1"></a>context.&lt;variable-name&gt; = context.steps.&lt;startNode-Name&gt;.&lt;inputVariable-name&gt;
 </span></code></pre></div>
 To call a function:
-<div class="language-text highlight"><pre><span></span><code><span id="__span-1-1"><a id="__codelineno-1-1" name="__codelineno-1-1" href="#__codelineno-1-1"></a>context.&lt;UserDefined-Variable-Name&gt;= UserDefined-Function-Name(context.steps.&lt;startNode-Name&gt;.&lt;inputVariable-name&gt;
+<div class="language-text highlight"><pre><span></span><code><span id="__span-1-1"><a id="__codelineno-1-1" name="__codelineno-1-1" href="#__codelineno-1-1"></a>context.&lt;UserDefined-Variable-Name&gt;= UserDefined-Function-Name(context.steps.&lt;startNode-Name&gt;.&lt;inputVariable-name&gt;)
 </span></code></pre></div></p>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
-<p>You cannot import packages in the Function node. However, you can use pre-existing libraries such as pandas or  NumPy.</p>
+<p>You cannot import packages in the Function node. However, you can use pre-existing libraries such as pandas or  NumPy. <a href="../script-libraries/">Learn more</a>.</p>
 </div>
 </li>
 <li>
