--- a/gale/getting-started/sign-up-sign-in/index.html
+++ b/gale/getting-started/sign-up-sign-in/index.html
@@ -3373,11 +3373,10 @@ Please complete the email OTP verification to sign in successfully.</div>
 <p>Enter your registered email ID and click <strong>Continue with Email</strong>.</p>
 <p><a class="glightbox" href="../images/continue-with-email.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/continue-with-email.png" alt="continue with email" title="continue with email" style="border: 1px solid gray; zoom:75%;"></a></p>
 </li>
-<li>
-<p>Enter your password and click <strong>Login</strong>.</p>
-</li>
 </ol>
-<p><a class="glightbox" href="../images/click-login.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/click-login.png" alt="click login" title="click login" style="border: 1px solid gray; zoom:75%;"></a></p>
+<p>Then, enter your password and click <strong>Login</strong>.</p>
+<div class="language-text highlight"><pre><span></span><code>&lt;img src=&quot;../images/click-login.png&quot; alt=&quot;click login&quot; title=&quot;click login&quot; style=&quot;border: 1px solid gray; zoom:75%;&quot;&gt;
+</code></pre></div>
 <div class="admonition warning">
 <p class="admonition-title">Important</p>
 <p>Once you create an account, you need to add credits for computation hours to start using GALE's features.</p>
