deploy: 164a1f5334a5cd084b4d9339384fc5b47d2814d1

--- a/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/manage-input-and-output/index.html
+++ b/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/manage-input-and-output/index.html
@@ -2844,7 +2844,7 @@
 <li>Input Variables: The input variables provide initial data to the agent flow. </li>
 <li>Output Variables: The output variables store and make accessible the derived values from the flow. You must define output variables to capture results you want to return from the agent.</li>
 </ul>
-<p>Once the input and output variables are defined, you can access these variables using the context object syntax, and can be utilized throughout the flow:</p>
+<p>Once the input and output variables are defined, you can access these variables using the context object syntax, and use them throughout the flow:</p>
 <ul>
 <li>Input variables are available immediately after the Start node.</li>
 <li>Output variables can be set in any node and are collected at the End node.</li>
@@ -2887,15 +2887,15 @@ If you want to make the data type mandatory, then enable the <strong>Mandatory</
 </div>
 </li>
 </ul>
-<p><a class="glightbox" href="../images/url-timeout.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/url-timeout.png" alt="File URL timeout" title="File URL timeout" style="border: 1px solid gray; zoom:80%;"></a></p>
+<p><a class="glightbox" href="../images/url-timeout.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/url-timeout.png" alt="File URL timeout" title="File URL timeout" style="border: 1px solid gray; zoom:50%;"></a></p>
 </li>
 </ul>
 </li>
 <li>
 <p>Click <strong>Save</strong>.</p>
+<p>The input variable is displayed under the Input tab of the <strong>Manage Input &amp; Output</strong> dialog.</p>
 </li>
 </ol>
-<p>The input variable is displayed under the Input tab of the <strong>Manage Input &amp; Output</strong> dialog.</p>
 <p><strong>Steps to manage output variables</strong>:</p>
 <ol>
 <li>
@@ -2912,8 +2912,10 @@ If you want to make the data type mandatory, then enable the <strong>Mandatory</
 </li>
 <li>In the <strong>Type</strong> field, select a data type from the drop-down list.
 The options are String, Number, and Boolean.</li>
-<li>Click <strong>Save</strong>. 
-The output variable is displayed under the Output tab of the <strong>Manage Input &amp; Output</strong> dialog.</li>
+<li>
+<p>Click <strong>Save</strong>. </p>
+<p>The output variable is displayed under the Output tab of the <strong>Manage Input &amp; Output</strong> dialog.</p>
+</li>
 </ol>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
