--- a/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/run-the-flow/index.html
+++ b/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/run-the-flow/index.html
@@ -2852,7 +2852,7 @@
 <p>On the top of the Run dialog, click the <strong>Debug</strong> icon to open the <strong>Debug</strong> log as shown in the following image.</p>
 <p><a class="glightbox" href="../images/debug-icon.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/debug-icon.png" alt="Debug Icon" title="Debug Icon" style="border: 1px solid gray; zoom:80%;"></a></p>
 <p>The debug log is opened and output results are started.</p>
-<p>You can view the following details:</p>
+<p>You can view the following details in the debug log:</p>
 <ul>
 <li>
 <p>The values that you provided in the flow.</p>
