--- a/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/manage-input-and-output/index.html
+++ b/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/manage-input-and-output/index.html
@@ -2874,14 +2874,16 @@ If you want to make the data type mandatory, then enable the <strong>Mandatory</
 </li>
 <li>
 <p>If you select the <strong>Remote file</strong> data type, the <strong>File url timeout</strong> field appears. Enter the File URL timeout duration in minutes.</p>
-<div class="language-text highlight"><pre><span></span><code>!!! note
-
-    The default File URL timeout is 5 minutes. You can set it to anywhere between 5 minutes and 7 days (10080 minutes).
-</code></pre></div>
 <p><a class="glightbox" href="../images/url-timeout.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/url-timeout.png" alt="File URL timeout" title="File URL timeout" style="border: 1px solid gray; zoom:50%;"></a></p>
 </li>
 </ul>
 </li>
+</ol>
+<div class="admonition note">
+<p class="admonition-title">Note</p>
+<p>The default File URL timeout is 5 minutes. You can set it to anywhere between 5 minutes and 7 days (10080 minutes).</p>
+</div>
+<ol>
 <li>
 <p>Click <strong>Save</strong>.</p>
 <p>The input variable is displayed on the Input tab of the <strong>Manage Input &amp; Output</strong> dialog.</p>
