deploy: 58cb1beba7f2966e4a363551a08817b41b34338a

--- a/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/manage-input-and-output/index.html
+++ b/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/manage-input-and-output/index.html
@@ -3030,7 +3030,7 @@ Alternatively, you can click the <strong>Start</strong> node. The <strong>Manage
 <p><a class="glightbox" href="../images/enter-input-variable.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/enter-input-variable.png" alt="Enter Input Variable" title="Enter Input Variable" style="border: 1px solid gray; zoom:50%;"></a></p>
 </li>
 <li>
-<p>In the <strong>Name(key)</strong> field, provide a name for the input variable. For example, Product_ID.</p>
+<p>In the <strong>Name (key)</strong> field, provide a name for the input variable. For example, Product_ID.</p>
 </li>
 <li>
 <p>In the <strong>Type</strong> field, select a data type from the drop-down list - Text, Number, Boolean, or Remote file.
@@ -3055,11 +3055,11 @@ If you want to make the data type mandatory, then enable the <strong>Mandatory</
 <p>On the top of the canvas of the Agents page, click the <strong>Manage I/O</strong> button. The <strong>Manage Input &amp; Output</strong> dialog is displayed.</p>
 </li>
 <li>
-<p>On the <strong>Output</strong> tab, click the <strong>+ Add output variable</strong> button. The <strong>Enter output variable</strong> dialog is displayed.<br />
+<p>On the <strong>Output</strong> tab, click the <strong>+ Add output variable</strong> button. The <strong>Enter output variable</strong> dialog is displayed.
 <a class="glightbox" href="../images/enter-output-variable.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/enter-output-variable.png" alt="Enter Output Variable" title="Enter Output Variable" style="border: 1px solid gray; zoom:80%;"></a></p>
 </li>
 <li>
-<p>In the <strong>Name(key)</strong> field, provide a name for the output variable.</p>
+<p>In the <strong>Name (key)</strong> field, provide a name for the output variable.</p>
 </li>
 <li>
 <p>In the <strong>Type</strong> field, select a data type from the drop-down list - String, Number, or Boolean.</p>
